# ml-project

./: .gitignore  README.md  app.py  denoise.py  evaluate.py  kaggle_train.ipynb  plot_compare.py  pyproject.toml  train.py
data/: dataset.py  download.py
model/: loss.py  unet.py
utils/: audio.py
