[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.13.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pesq>=0.0.4",
    "pystoi>=0.4.1",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
    "transformers>=5.6.2",
]
